[package]
name = "humanerr"
version = "0.1.0"
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-error = { git = "https://github.com/tokio-rs/tracing.git", branch = "eliza/depath" }
adhocerr = "0.1.2"
