[package]
name = "eyre-impl"
version = "0.1.0"
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/yaahc/eyre-impl"
homepage = "https://github.com/yaahc/eyre-impl"
documentation = "https://docs.rs/eyre-impl"
keywords = ["error"]
description = """
The generic backing types and traits necessary to implement different forms of catch all contextual errors
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
